# AI-WRITER

./: .gitignore  deploy.env.example  docker-compose.app-only.yml  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4_initial_schema.py  b2c3d4e5_add_user_api_keys.py  c3d4e5f6_add_chat_tables.py  d4e5f6a7_add_article_versions.py  e5f6a7b8_api_key_purpose.py  f7g8h9i0_system_api_keys.py  g8h9i0j1_system_key_purpose.py  h9i0k1l2_user_api_keys_pool_drop_unique.py  i0j1k2l3_add_auto_review_fields.py
backend/app/: celery_app.py  config.py  database.py  main.py  redis_client.py
backend/app/celery_tasks/: story.py
backend/app/models/: __init__.py  api_key.py  article_version.py  chat.py  message.py  segment.py  system_api_key.py  task.py  task_event.py  user.py
backend/app/orchestrator/: emotion_story.py
backend/app/prompts/: __init__.py
backend/app/prompts/emotion_story/: chapter.j2  chapter_1.j2  chapter_continuation.j2  epilogue.j2  free.j2  free_continuation.j2  intro.j2  (+5 more)
backend/app/routers/: admin.py  admin_api_keys.py  api_keys.py  auth.py  chat.py  stream.py  tasks.py
backend/app/schemas/: auth.py  task.py
backend/app/services/: article_review.py  export.py  key_pool.py  llm.py  user_api_key_ops.py
backend/app/utils/: async_persist.py  deps.py  intent_detection.py  security.py  task_control.py  task_messages.py  word_count.py
backend/scripts/: add_purpose_column.py  create_admin.py  test_word_count_extraction.py
backend/tests/: test_word_count.py
(+84 files in other folders)
