[project]
name = "ai-storyflow-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "celery[gevent]>=5.4.0",
    "redis>=5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "openai>=1.30.0",
    "jinja2>=3.1.0",
    "python-docx>=1.1.0",
    "structlog>=24.0.0",
    "tenacity>=8.4.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
